@@ -730,21 +730,11 @@ public class SimpleFeatureTypeBuilder {
         return null;
     }
 
-    /**
-     * Replace the descriptor at the provided index.
-     *
-     * @param index
-     * @param descriptor
-     */
+    /** Replace the descriptor at the provided index. */
     public void set(int index, AttributeDescriptor descriptor) {
         attributes().set(index, descriptor);
     }
-    /**
-     * Replace the descriptor at the provided index.
-     *
-     * @param index
-     * @param descriptor
-     */
+    /** Replace the descriptor at the provided index. */
     public void set(AttributeDescriptor descriptor) {
         int index = indexOf(descriptor.getLocalName());
         if (index == -1) {
@@ -754,12 +744,7 @@ public class SimpleFeatureTypeBuilder {
         }
         set(index, descriptor);
     }
-    /**
-     * Replace the descriptor at the provided index.
-     *
-     * @param index
-     * @param descriptor
-     */
+    /** Replace the descriptor at the provided index. */
     public void set(String attributeName, AttributeDescriptor descriptor) {
         int index = indexOf(attributeName);
         if (index == -1) {
@@ -781,12 +766,7 @@ public class SimpleFeatureTypeBuilder {
         }
         return -1;
     }
-    /**
-     * Replace the descriptor at the provided index.
-     *
-     * @param index
-     * @param descriptor
-     */
+    /** Replace the descriptor at the provided index. */
     public void set(String attributeName, AttributeTypeBuilder attributeBuilder) {
         AttributeDescriptor descriptor = attributeBuilder.buildDescriptor(attributeName);
         set(attributeName, descriptor);
@@ -916,10 +896,8 @@ public class SimpleFeatureTypeBuilder {
             return newList();
         }
         try {
-            return origional.getClass().newInstance();
-        } catch (InstantiationException e) {
-            return newList();
-        } catch (IllegalAccessException e) {
+            return origional.getClass().getDeclaredConstructor().newInstance();
+        } catch (Exception e) {
             return newList();
         }
     }
@@ -1046,14 +1024,7 @@ public class SimpleFeatureTypeBuilder {
         return b.buildFeatureType();
     }
 
-    /**
-     * Configure expected
-     *
-     * @param origional
-     * @param query
-     * @return
-     */
-    public static SimpleFeatureType retype(SimpleFeatureType origional, Query query) {
+    public static SimpleFeatureType retype(SimpleFeatureType original, Query query) {
         CoordinateReferenceSystem crs = null;
         if (query.getCoordinateSystem() != null) {
             crs = query.getCoordinateSystem();
@@ -1061,17 +1032,17 @@ public class SimpleFeatureTypeBuilder {
         if (query.getCoordinateSystemReproject() != null) {
             crs = query.getCoordinateSystemReproject();
         }
-        return retype(origional, query.getPropertyNames(), crs);
+        return retype(original, query.getPropertyNames(), crs);
     }
 
     private static SimpleFeatureType retype(
-            SimpleFeatureType origional, String[] propertyNames, CoordinateReferenceSystem crs) {
+            SimpleFeatureType original, String[] propertyNames, CoordinateReferenceSystem crs) {
         // TODO Auto-generated method stub
         return null;
     }
 
     /**
-     * Copys a feature type.
+     * Copies a feature type.
      *
      * <p>This method does a deep copy in that all individual attributes are copied as well.
      */
