@@ -16,12 +16,14 @@
  */
 package org.geotools.feature.visitor;
 
+import java.util.List;
+import java.util.Optional;
+
 public class CalcUtil {
 
     /**
      * Sums an array of numbers together while using the correct class type.
      *
-     * @param numbers
      * @return the sum contained in the most appropriate number class
      */
     static Number sum(Number[] numbers) {
@@ -61,7 +63,7 @@ public class CalcUtil {
                 sum += nextValue;
             }
 
-            newSum = new Float(sum);
+            newSum = Float.valueOf(sum);
         } else if (newSum instanceof Double) {
             double sum = 0;
             double nextValue;
@@ -71,7 +73,7 @@ public class CalcUtil {
                 sum += nextValue;
             }
 
-            newSum = new Double(sum);
+            newSum = Double.valueOf(sum);
         } else {
             return null;
         }
@@ -100,23 +102,19 @@ public class CalcUtil {
         // Integer, Long, Float, Double
         if (division instanceof Integer) {
             // we've got 2 integers, but we're going to use double anyways
-            return new Double(num1.doubleValue() / num2.doubleValue());
+            return Double.valueOf(num1.doubleValue() / num2.doubleValue());
         } else if (division instanceof Long) {
             return Long.valueOf(num1.longValue() / num2.longValue());
         } else if (division instanceof Float) {
-            return new Float(num1.floatValue() / num2.floatValue());
+            return Float.valueOf(num1.floatValue() / num2.floatValue());
         } else if (division instanceof Double) {
-            return new Double(num1.doubleValue() / num2.doubleValue());
+            return Double.valueOf(num1.doubleValue() / num2.doubleValue());
         } else {
             return null;
         }
     }
 
-    /**
-     * Calculates the average, and returns it in the correct class.
-     *
-     * @param numbers
-     */
+    /** Calculates the average, and returns it in the correct class. */
     static Number average(Number[] numbers) {
         Number sum = sum(numbers);
 
@@ -126,7 +124,6 @@ public class CalcUtil {
     /**
      * Determines the most appropriate class to use for a multiclass calculation.
      *
-     * @param objects
      * @return the most
      */
     static Class bestClass(Object[] objects) {
@@ -166,12 +163,7 @@ public class CalcUtil {
         }
     }
 
-    /**
-     * Casts an object to the specified type
-     *
-     * @param var
-     * @param type
-     */
+    /** Casts an object to the specified type */
     static Object convert(Object var, Class type) {
         if (var instanceof Number) { // use number conversion
 
@@ -182,9 +174,9 @@ public class CalcUtil {
             } else if (type == Long.class) {
                 return Long.valueOf(newNum.longValue());
             } else if (type == Float.class) {
-                return new Float(newNum.floatValue());
+                return Float.valueOf(newNum.floatValue());
             } else if (type == Double.class) {
-                return new Double(newNum.doubleValue());
+                return Double.valueOf(newNum.doubleValue());
             } else if (type == String.class) {
                 return new String(newNum.toString());
             }
@@ -195,9 +187,9 @@ public class CalcUtil {
             } else if (type == Long.class) {
                 return Long.valueOf(((Long) var).longValue());
             } else if (type == Float.class) {
-                return new Float(((Float) var).floatValue());
+                return Float.valueOf(((Float) var).floatValue());
             } else if (type == Double.class) {
-                return new Double(((Double) var).doubleValue());
+                return Double.valueOf(((Double) var).doubleValue());
             } else if (type == String.class) {
                 return new String(var.toString());
             }
@@ -217,9 +209,9 @@ public class CalcUtil {
             } else if (newVar instanceof Long) {
                 return Long.valueOf(newNum.longValue());
             } else if (newVar instanceof Float) {
-                return new Float(newNum.floatValue());
+                return Float.valueOf(newNum.floatValue());
             } else if (newVar instanceof Double) {
-                return new Double(newNum.doubleValue());
+                return Double.valueOf(newNum.doubleValue());
             } else {
                 return null;
             }
@@ -234,8 +226,6 @@ public class CalcUtil {
     /**
      * Given an array of objects, traverses the array and determines the most suitable data type to
      * perform the calculation in. An empty object of the correct class is returned;
-     *
-     * @param objects
      */
     static Object getObject(Object[] objects) {
         Class bestClass = bestClass(objects);
@@ -243,9 +233,9 @@ public class CalcUtil {
         if (bestClass == String.class) {
             return ""; // $NON-NLS-1$
         } else if (bestClass == Double.class) {
-            return new Double(0);
+            return Double.valueOf(0);
         } else if (bestClass == Float.class) {
-            return new Float(0);
+            return Float.valueOf(0);
         } else if (bestClass == Long.class) {
             return Long.valueOf(0);
         } else if (bestClass == Integer.class) {
@@ -255,12 +245,7 @@ public class CalcUtil {
         }
     }
 
-    /**
-     * Similar to java.lang.Comparable.compareTo, but can handle 2 different data types.
-     *
-     * @param val1
-     * @param val2
-     */
+    /** Similar to java.lang.Comparable.compareTo, but can handle 2 different data types. */
     static int compare(Comparable val1, Comparable val2) {
         if (val1.getClass() == val2.getClass()) {
             // both the same type, no conversion is necessary.
@@ -281,5 +266,22 @@ public class CalcUtil {
 
         // now do the comparison
         return val1.compareTo(val2);
+    }
+
+    /**
+     * Utility method for {@link FeatureAttributeVisitor} implementations that are simply returnin
+     * the same type as the inputs
+     *
+     * @param inputTypes
+     * @return
+     */
+    public static Optional<List<Class>> reflectInputTypes(
+            int expectedInputCount, List<Class> inputTypes) {
+        if (inputTypes == null || inputTypes.size() != 1)
+            throw new IllegalArgumentException(
+                    "Expecting " + expectedInputCount + " types in input, but got " + inputTypes);
+
+        // same as the input
+        return Optional.of(inputTypes);
     }
 }
