@@ -40,8 +40,6 @@ public abstract class AbstractQuantityClassificationFunction extends Classificat
      * Returns the list visitor for the specific implementation of "quantity" (e.g., count, area,
      * ...). The visitor must return a "bins" structure matching {code}List<Comparable>[]{code},
      * where each array entry is a bin, and values inside the bin are sorted from lowest to highest
-     *
-     * @return
      */
     protected abstract FeatureCalc getListVisitor();
 
@@ -69,12 +67,16 @@ public abstract class AbstractQuantityClassificationFunction extends Classificat
             return null;
         }
         Comparable globalMax = (Comparable) lastBin[lastBin.length - 1];
-
+        Classifier result;
         if ((globalMin instanceof Number) && (globalMax instanceof Number)) {
-            return calculateNumerical(bin, globalMin, globalMax);
+            result = (Classifier) calculateNumerical(bin, globalMin, globalMax);
         } else {
-            return calculateNonNumerical(bin, globalMin, globalMax);
+            result = (Classifier) calculateNonNumerical(bin, globalMin, globalMax);
         }
+        if (percentages())
+            result.setPercentages(calculatePercentages(bin, featureCollection.size()));
+
+        return result;
     }
 
     private Object calculateNumerical(List[] bin, Comparable globalMin, Comparable globalMax) {
@@ -108,24 +110,26 @@ public abstract class AbstractQuantityClassificationFunction extends Classificat
             decPlaces = Math.max(decPlaces, decimalPlaces(((Number) localMax[i]).doubleValue()));
             // clean up truncation error
             if (decPlaces > -1) {
-                localMin[i] = new Double(round(((Number) localMin[i]).doubleValue(), decPlaces));
-                localMax[i] = new Double(round(((Number) localMax[i]).doubleValue(), decPlaces));
+                localMin[i] =
+                        Double.valueOf(round(((Number) localMin[i]).doubleValue(), decPlaces));
+                localMax[i] =
+                        Double.valueOf(round(((Number) localMax[i]).doubleValue(), decPlaces));
             }
 
             if (i == 0) {
                 // ensure first min is less than or equal to globalMin
-                if (localMin[i].compareTo(new Double(((Number) globalMin).doubleValue())) > 0)
+                if (localMin[i].compareTo(Double.valueOf(((Number) globalMin).doubleValue())) > 0)
                     localMin[i] =
-                            new Double(
+                            Double.valueOf(
                                     fixRound(
                                             ((Number) localMin[i]).doubleValue(),
                                             decPlaces,
                                             false));
             } else if (i == classNum - 1) {
                 // ensure last max is greater than or equal to globalMax
-                if (localMax[i].compareTo(new Double(((Number) globalMax).doubleValue())) < 0)
+                if (localMax[i].compareTo(Double.valueOf(((Number) globalMax).doubleValue())) < 0)
                     localMax[i] =
-                            new Double(
+                            Double.valueOf(
                                     fixRound(
                                             ((Number) localMax[i]).doubleValue(), decPlaces, true));
             }
@@ -166,4 +170,15 @@ public abstract class AbstractQuantityClassificationFunction extends Classificat
         }
         return calculate((SimpleFeatureCollection) feature);
     }
+
+    private double[] calculatePercentages(List[] bin, int totalSize) {
+        double[] percentages = new double[bin.length];
+        for (int i = 0; i < bin.length; i++) {
+            percentages[i] = ((double) bin[i].size() / (double) totalSize) * 100;
+        }
+        return percentages;
+    }
+
+    /** @return true if percentages computation is enabled, false if not */
+    protected abstract boolean percentages();
 }
