@@ -18,13 +18,14 @@
  */
 package org.geotools.filter;
 
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertFalse;
+
 import java.util.logging.Logger;
-import junit.framework.Test;
-import junit.framework.TestCase;
-import junit.framework.TestSuite;
 import org.geotools.factory.CommonFactoryFinder;
 import org.geotools.feature.simple.SimpleFeatureBuilder;
 import org.geotools.feature.simple.SimpleFeatureTypeBuilder;
+import org.junit.Test;
 import org.locationtech.jts.geom.Coordinate;
 import org.locationtech.jts.geom.Geometry;
 import org.locationtech.jts.geom.GeometryFactory;
@@ -38,29 +39,16 @@ import org.opengis.filter.PropertyIsBetween;
  *
  * @author James Macgill
  */
-public class BetweenTest extends TestCase {
+public class BetweenTest {
     /** Standard logging instance */
     protected static final Logger LOGGER =
             org.geotools.util.logging.Logging.getLogger(BetweenTest.class);
 
-    public BetweenTest(java.lang.String testName) {
-        super(testName);
-    }
-
-    public static void main(java.lang.String[] args) {
-        junit.textui.TestRunner.run(suite());
-    }
-
-    public static Test suite() {
-        TestSuite suite = new TestSuite(BetweenTest.class);
-
-        return suite;
-    }
-
+    @Test
     public void testContains() throws Exception {
         // this should move out to a more configurable system run from scripts
         // but we can start with a set of hard coded tests
-        BetweenFilterImpl a = new BetweenFilterImpl();
+        IsBetweenImpl a = new IsBetweenImpl(null, null, null);
 
         SimpleFeatureTypeBuilder ftb = new SimpleFeatureTypeBuilder();
         ftb.setCRS(null);
@@ -69,8 +57,8 @@ public class BetweenTest extends TestCase {
         ftb.setName("testSchema");
         SimpleFeatureType schema = ftb.buildFeatureType();
 
-        a.setExpression1(new LiteralExpressionImpl(new Double(5)));
-        a.setExpression2(new LiteralExpressionImpl(new Double(15)));
+        a.setExpression1(new LiteralExpressionImpl(Double.valueOf(5)));
+        a.setExpression2(new LiteralExpressionImpl(Double.valueOf(15)));
         a.setExpression(new AttributeExpressionImpl(schema, "value"));
 
         // FlatFeatureFactory fFac = new FlatFeatureFactory(schema);
@@ -112,6 +100,7 @@ public class BetweenTest extends TestCase {
         assertEquals(false, a.evaluate(f5)); // too large
     }
 
+    @Test
     public void testEquals() throws Exception {
         org.opengis.filter.FilterFactory ff = CommonFactoryFinder.getFilterFactory();
         PropertyIsBetween f1 = ff.between(ff.property("abc"), ff.literal(10), ff.literal(20));
