@@ -109,11 +109,7 @@ class JDBCAccessPostGis extends JDBCAccessBase {
         }
     }
 
-    /**
-     * Initialize needed sql statement strings
-     *
-     * @param config
-     */
+    /** Initialize needed sql statement strings */
     private void initStatementStrings(Config config) {
         final String geomAttr = config.getGeomAttributeNameInSpatialTable();
         extentSelect = "select " + functionPrefix + "extent(" + geomAttr + ") from {0}";
@@ -192,8 +188,8 @@ class JDBCAccessPostGis extends JDBCAccessBase {
                 String[] upper = coords[1].split(" ");
                 extent =
                         new Envelope(
-                                new Coordinate(new Double(lower[0]), new Double(lower[1])),
-                                new Coordinate(new Double(upper[0]), new Double(upper[1])));
+                                new Coordinate(Double.valueOf(lower[0]), Double.valueOf(lower[1])),
+                                new Coordinate(Double.valueOf(upper[0]), Double.valueOf(upper[1])));
             }
         }
 
