@@ -104,7 +104,6 @@ public class GeometryConverter {
      *
      * @param sdoGeometry datum STRUCT to be converted to a double[]
      * @return JTS <code>Geometry</code> representing the provided <code>datum</code>
-     * @throws SQLException
      * @see net.refractions.jspatial.Converter#toObject(oracle.sql.STRUCT)
      */
     public Geometry asGeometry(STRUCT sdoGeometry) throws SQLException {
@@ -350,7 +349,7 @@ public class GeometryConverter {
     protected final CHAR toCHAR(String s) {
 
         // make sure if the string is larger than one character, only take the first character
-        if (s.length() > 1) s = new String((new Character(s.charAt(0))).toString());
+        if (s.length() > 1) s = new String((Character.valueOf(s.charAt(0))).toString());
         try {
             // BUG: make sure I am correct
             return new CHAR(s, CharacterSet.make(CharacterSet.ISO_LATIN_1_CHARSET));
